...

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Gas"
                android:id="@+id/gasTextView"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/textView10"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Entertainment"
                android:id="@+id/entertainmentTextView"
                android:layout_below="@+id/gasProgressDisplay"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="110sp"
                android:layout_height="48sp"
                android:text="Add Goal"
                android:id="@+id/button5"
                android:textStyle="normal"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:width="120sp"
                android:background="#4dd35a"
                android:onClick="selectNewGoal"
                android:layout_below="@+id/otherProgressDisplay"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="6sp"
                android:layout_marginTop="6sp" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gasProgressBar"
                android:layout_below="@+id/gasTextView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="#e6e3e3"
                android:indeterminate="false"
                />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/entertainmentProgressBar"
                android:background="#e6e3e3"
                android:indeterminate="false"
                android:layout_below="@+id/entertainmentTextView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />
...
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3sp"
                android:text="Home"
                android:id="@+id/button"
                android:width="80sp"
                android:height="60sp"
                android:background="@drawable/home3"
                android:onClick="selectHome"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
...

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Food"
                android:id="@+id/foodTextView"
                android:layout_below="@+id/entertainmentProgressDisplay"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/foodProgressBar"
                android:background="#e6e3e3"
                android:indeterminate="false"
                android:layout_below="@+id/foodTextView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Bills"
                android:id="@+id/billsTextView"
                android:layout_below="@+id/foodProgressDisplay"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/billsProgressBar"
                android:background="#e6e3e3"
                android:indeterminate="false"
                android:layout_below="@+id/billsTextView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
...

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Shopping"
                android:id="@+id/shoppingTextView"
                android:layout_below="@+id/billsProgressDisplay"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shoppingProgressBar"
                android:background="#e6e3e3"
                android:indeterminate="false"
                android:layout_below="@+id/shoppingTextView"
                android:layout_alignRight="@+id/billsProgressBar"
                android:layout_alignEnd="@+id/billsProgressBar"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Other"
                android:id="@+id/otherTextView"
                android:layout_below="@+id/shoppingProgressDisplay"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/button"
                android:layout_alignEnd="@+id/button" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/otherProgressBar"
                android:background="#e6e3e3"
                android:indeterminate="false"
                android:layout_below="@+id/otherTextView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />
...
