...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Purchase Amount"
        android:id="@+id/textView6"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="false"
        android:nestedScrollingEnabled="false" />
...
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/moneyField"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxHeight="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Place of Purchase"
        android:id="@+id/textView7"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:layout_below="@+id/moneyField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/placeField"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10sp"
        android:linksClickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Method of Purchase"
        android:id="@+id/textView8"
        android:textSize="20sp"
        android:layout_below="@+id/placeField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:id="@+id/purchaseType"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Date of Purchase"
        android:id="@+id/textView9"
        android:layout_below="@+id/purchaseType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textIsSelectable="false"
        android:textSize="20sp" />

    <Button
        android:layout_width="110sp"
        android:layout_height="48sp"
        android:text="Submit"
        android:id="@+id/button4"
        android:textSize="18sp"
        android:textStyle="normal"
        android:onClick="displayInfo"
        android:background="#4dd35a"
        android:textColor="#ffffff"
        android:width="110sp"
...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Category"
        android:id="@+id/categoryOfPurchase"
        android:textSize="20sp"
        android:layout_below="@+id/setDateButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/categorySpinner"
        android:spinnerMode="dropdown"
        android:entries="@array/Goals_Spending_Categories"
        android:clickable="true"
        android:visibility="visible"
        android:layout_below="@+id/categoryOfPurchase"
        android:layout_alignParentLeft="true"
...
