<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.vincent.budgetbuddy.BudgetBuddy"
    tools:showIn="@layout/activity_budget_buddy"
    android:background="@drawable/background7"
    android:clickable="false">
    <!--
    android:background="#11cbe4"
    -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Budget: $0"
        android:id="@+id/totalBudget"
        android:textStyle="bold|italic"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Home"
        android:id="@+id/button2"
        android:width="80sp"
        android:height="60sp"
        android:background="@drawable/home3"
        android:onClick="selectHomeButton"
        android:textColor="#3078b8"
        android:gravity="center|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2sp"
        android:text="Goals"
        android:id="@+id/button3"
        android:width="80sp"
        android:height="60sp"
        android:background="@drawable/goals3"
        android:onClick="selectGoals"
        android:layout_alignBottom="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:textColor="#3078b8"
        android:gravity="center|bottom" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2sp"
        android:text="Spending"
        android:id="@+id/button11"
        android:width="80sp"
        android:height="60sp"
        android:background="@drawable/money2"
        android:onClick="selectSpending"
        android:layout_alignBottom="@+id/button3"
        android:layout_toRightOf="@+id/button3"
        android:layout_toEndOf="@+id/button3"
        android:textColor="#3078b8"
        android:gravity="center|bottom" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2sp"
        android:text="Add"
        android:id="@+id/button12"
        android:width="80sp"
        android:height="60sp"
        android:background="@drawable/add2"
        android:onClick="selectPurchase"
        android:layout_alignBottom="@+id/button11"
        android:layout_toRightOf="@+id/button11"
        android:layout_toEndOf="@+id/button11"
        android:textColor="#3078b8"
        android:gravity="center|bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Recent Purchases:"
        android:id="@+id/textView3"
        android:layout_below="@+id/totalBudget"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button2">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recentPurchases" />
    </LinearLayout>

</RelativeLayout>
