...

    <Button
        android:layout_width="110sp"
        android:layout_height="48sp"
        android:layout_margin="15sp"
        android:text="Submit"
        android:id="@+id/submitBudget"
        android:textSize="18sp"
        android:textStyle="normal"
        android:onClick="goalAdded"
        android:background="#4dd35a"
        android:textColor="#ffffff"
        android:allowUndo="false"
...
    -->
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="Category"
    android:id="@+id/textView2"
    android:textSize="22sp"
    android:layout_alignTop="@+id/imageView"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="Budget Goal:"
    android:id="@+id/textView14"
    android:nestedScrollingEnabled="false"
    android:textSize="22sp"
    android:layout_below="@+id/spinner"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="numberDecimal"
    android:ems="10"
    android:id="@+id/amountField"
    android:layout_below="@+id/textView14"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

    <Spinner
    android:layout_width="wrap_content"
...
